[impl]: cfg, half, change previous impl to match the need of lab4
Signed-off-by: UshioA <shiosshio@outlook.com>

--- a/Code/Makefile
+++ b/Code/Makefile
@@ -43,6 +43,7 @@ clean:
 	rm -f $(OBJS) $(OBJS:.o=.d)
 	rm -f $(LFC) $(YFC) $(YFC:.c=.h)
 	rm -f *~
+	rm -f ../compile_commands.json
 
 clean-all: clean
 	rm -f ../parser
