--- a/Code/Makefile
+++ b/Code/Makefile
@@ -5,7 +5,7 @@
 CC = gcc
 FLEX = flex
 BISON = bison
-CFLAGS = -std=c99 -ggdb
+CFLAGS = -std=c99 -ggdb -Wall -Werror -O2
 
 # 编译目标：src目录下的所有.c文件
 CFILES = $(shell find ./ -name "*.c")
